# hacklipse_backend

./: README.md
narrative_merge_engine/: .env.example  .gitignore  README.md  gen_reqs.py  main.py  pyproject.toml  requirements.txt.bak  run_mig.py  startup.sh
narrative_merge_engine/alembic/: env.py
narrative_merge_engine/alembic/versions/: 24025de78a2d_initial_schema.py  compliance_rbac_audit.py
narrative_merge_engine/app/: __init__.py
narrative_merge_engine/app/api/: deps.py  permissions.py
narrative_merge_engine/app/api/v1/: router.py
narrative_merge_engine/app/core/: config.py  encryption.py  exceptions.py  logging.py  security.py
narrative_merge_engine/app/core/ai/: base_provider.py  orchestrator.py  prompt_registry.py  (+1 more)
narrative_merge_engine/app/db/: base.py  session.py
narrative_merge_engine/app/repositories/: base.py  entity_repos.py  testimony_repo.py
narrative_merge_engine/app/services/: access_control_service.py  audit_service.py  conflict_detection_service.py  demo_pipeline.py  event_extraction_service.py  question_generation_service.py  report_generation_service.py  speech_to_text_service.py  testimony_service.py  timeline_reconstruction_service.py
narrative_merge_engine/logs_extract/deployments/: active
narrative_merge_engine/static/: index.html
narrative_merge_engine/static/assets/: index-CFFyd6Q4.css  index-UE8_RJHl.js
narrative_merge_engine/tests/: conftest.py  test_conflict_detection.py  test_testimony_service.py  test_timeline_reconstruction.py
narrative_merge_engine/tests/pipeline/: conftest.py  test_demo_pipeline.py
(+61 files in other folders)
